# flare-compiler

./: '  Cargo.toml
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs  span.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: lib.rs  scope.rs  scope_id.rs
crates/interner/: Cargo.toml
crates/interner/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  text_input_tokenstream.rs  token.rs  tokenstream.rs
crates/parser/: Cargo.toml
crates/parser/src/: builder.rs  lib.rs  macros.rs
crates/parser/src/ast/: mod.rs  node.rs  nodes.rs  tokens.rs  visitor.rs
crates/parser/src/grammar/: common.rs  expression.rs  items.rs  mod.rs  statement.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
crates/typecheck/: Cargo.toml
crates/typecheck/src/: lib.rs
src/: main.rs
