[package]
name = "hir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
depends = { version = "0.10.1", features = ["hashbrown", "graphviz"] }
scopeguard = "1.1.0"
im = { version = "*", features = ["arbitrary", "serde"] }
dashmap = { version = "5.5.0", features = ["raw-api", "inline"] }
bumpalo = "3.13.0"
ahash = "0.8.3"
bytemuck = "1.13.1"
lazy_static = "1.4.0"
triomphe = "0.1.9"
hashbrown = "0.14.0"
once_cell = "1.18.0"
bevy_tasks = "0.11.0"
futures = "0.3.28"

[dependencies.interner]
path = "../interner"

[dependencies.executor]
path = "../executor"

[dependencies.parser]
path = "../parser"

[dependencies.diagnostics]
path = "../diagnostics"

[dev-dependencies]
pretty_assertions = "1.4.0"
