[package]
name = "interner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.5.0", features = ["raw-api", "inline"] }
triomphe = "0.1.9"
hashbrown = "0.14.0"
ahash = "0.8.3"
once_cell = "1.18.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
