[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
rowan = "0.15.8"
static_assertions = "1.1.0"
itertools = "0.10.3"
serde = "1.0.144"
thiserror = "1.0.34"
owo-colors = "3.5.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
indoc = "1.0.7"

[dependencies.syntax]
path = "../syntax"

[dependencies.lexer]
path = "../lexer"

[dependencies.diagnostics]
path = "../diagnostics"
